[tool.poetry]
name = "secsgem"
version = "0.2.0-alpha.4"
description = "Python SECS/GEM implementation"
readme = "README.md"

authors = ["Benjamin Parzella <bparzella@gmail.com>"]

license = "LGPL-2.1-or-later"

homepage = "https://github.com/bparzella/secsgem"
repository = "https://github.com/bparzella/secsgem"
documentation = "https://secsgem.readthedocs.io/"

classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",

    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

keywords = ["development", "hsms", "secs", "gem"]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.1"
transitions = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
prospector = "^1.10.2"
mypy = "^1.4.1"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"
sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.2.2"
myst-parser = "^2.0.0"
sphinx-autodoc-typehints = "^1.23.0"
sphinx-autobuild = "^2021.3.14"
types-PyYAML = "^6.0.12.11"
types-python-dateutil = "^2.8.19.14"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-report ndiff"
testpaths = [
    "tests",
    "secsgem"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
